--- a/app/views/layout/layout.html
+++ b/app/views/layout/layout.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>{{ title }}</title>
+  {% block header %}{% endblock %}
 </head>
 <body>
   {% block body %}{% endblock %}
+  {% block scripts %}{% endblock %}
 </body>
 </html>
