--- a/app/css/system/login.css
+++ b/app/css/system/login.css
@@ -1,3 +1,15 @@
-body{
-  background: #ccc;
+.login-container{
+  background: url(http://pages.anjukestatic.com/img/vipweb/AnthorityLogin.jpg);
+  padding-top: 200px;
+  height: 100%;
+  background-size: cover;
+}
+.login-wrap{
+  width: 400px;
+  padding: 20px;
+  border: 1px solid #eee;
+  background: #fff;
+  border-radius: 5px;
+  margin: 0 auto;
+  box-shadow: rgba(0, 0, 0, .3) 5px 10px 10px;
 }
