--- a/app/views/layout/layout.html
+++ b/app/views/layout/layout.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>{{ title }}</title>
+  <link rel="stylesheet" href="/lib/semantic.min.css">
   {% block header %}{% endblock %}
 </head>
 <body>
   {% block body %}{% endblock %}
+  <script src="/lib/jquery.min.js" charset="utf-8"></script>
+  <script src="/lib/vue.min.js" charset="utf-8"></script>
+  <script src="/lib/semantic.min.js" charset="utf-8"></script>
   {% block scripts %}{% endblock %}
 </body>
 </html>
