--- a/app/views/system/login.html
+++ b/app/views/system/login.html
@@ -6,11 +6,38 @@
 {% endblock %}
 
 {% block body %}
-<form action="/login" method="post">
-  <input type="text" name="username">
-  <input type="password" name="password">
-  <button type="submit">login</button>
-</form>
+<div class="login-container">
+  <div class="login-wrap">
+    <h3 class="ui header">
+      <i class="amazon icon"></i>
+      <div class="content">
+        Amazon Helper
+        <div class="sub header">您的贴心小助手</div>
+      </div>
+    </h3>
+
+    <form action="/login" method="post" class="ui form">
+
+      <div class="field">
+        <label>用户名</label>
+        <div class="ui left icon input">
+          <input type="text" name="username" placeholder="请输入用户名">
+          <i class="user icon"></i>
+        </div>
+      </div>
+
+      <div class="field">
+        <label>密码</label>
+        <div class="ui left icon input">
+          <input type="password" name="password" placeholder="请输入密码">
+          <i class="lock icon"></i>
+        </div>
+      </div>
+
+      <button type="submit" class="ui fluid primary button" style="margin-top: 40px">登录</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
 
 {% block scripts %}
