--- a/app/views/personal/order.html
+++ b/app/views/personal/order.html
@@ -6,51 +6,41 @@
 {% endblock %}
 
 {% block body %}
+
 <!-- test Table -->
-<table class="ui selectable celled table">
+<table class="ui selectable celled table" id="store-list">
   <thead>
-    <tr>
-      <th>Name</th>
-      <th>Status</th>
-      <th>Notes</th>
+    <tr class="center aligned">
+      <th>缩略图</th>
+      <th>库存SKU编号</th>
+      <th>交易号</th>
+      <th>买家信息</th>
+      <th>国家</th>
+      <th>时间</th>
+      <th>剩余发货时间</th>
+      <th>操作</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>John</td>
-      <td>No Action</td>
-      <td>None</td>
+    <tr v-for="(item, index) in items" :key="index" class="center aligned">
+      <td><img :src="item.image" alt="" height="100"></td>
+      <td v-text="item.skuid"></td>
+      <td v-text="item.code"></td>
+      <td v-text="item.name"></td>
+      <td v-text="item.country"></td>
+      <td v-text="item.time"></td>
+      <td v-text="item.remainTime"></td>
+      <td>
+        <i class="edit icon"></i>
+        <i class="add square icon"></i>
+        <i class="area chart icon"></i>
+      </td>
     </tr>
-    <tr>
-      <td>Jamie</td>
-      <td>Approved</td>
-      <td>Requires call</td>
-    </tr>
-    <tr>
-      <td>Jill</td>
-      <td>Denied</td>
-      <td>None</td>
-    </tr>
-    <!-- <tr class="warning">
-      <td>John</td>
-      <td>No Action</td>
-      <td>None</td>
-    </tr>
-    <tr>
-      <td>Jamie</td>
-      <td class="positive">Approved</td>
-      <td class="warning">Requires call</td>
-    </tr>
-    <tr>
-      <td>Jill</td>
-      <td class="negative">Denied</td>
-      <td>None</td>
-    </tr> -->
   </tbody>
 
   <!-- test pagination -->
   <tfoot>
-    <tr><th colspan="3">
+    <tr><th colspan="9">
       <div class="ui right floated pagination menu">
         <a class="icon item">
           <i class="left chevron icon"></i>
@@ -66,13 +56,23 @@
     </th>
   </tr></tfoot>
 </table>
+
+<!-- <form action="/addItem" method="post">
+  <input type="text" name="title">
+  <input type="text" name="content">
+  <button type="submit">submit</button>
+</form> -->
 {% endblock %}
 
 {% block scripts %}
-  <script src="/js/test.js"></script>
   <script>
-    window.pageInit && window.pageInit({
-      // this is data we need by vue
-    });
+  new Vue({
+    el: '#store-list',
+    data: {
+      items: {{ list }}
+    },
+    methods: {
+    }
+  });
   </script>
 {% endblock %}
